# telluric_spectra

./: .gitignore  README.md  Telluric_Intended_Workflow.txt  pyproject.toml  run_pipeline.sh  run_stage3_build_dataset.sh  run_telluric_pipeline.sh  setup_data_links.sh
p_apoyo/p_apoyo/phase2/: naira_config_HARPS.ini  run_all_telluric_spectra.py  smoke_config.ini  smoke_object_group_telluric_v2.py  telluric_spectra.py
phase1/: cleantable.py  raw_table.py
phase2/: smoke_config.ini  smoke_object_group_telluric.py  smoke_object_group_telluric_v2.py  telluric_spectra.py
phase3/: build_telluric_dataset.py
tools/: metadata_browser.py  plot_object_sky_positions.py
