[project]
name = "telluric-spectra"
version = "0.1.0"
description = "HARPS telluric-spectrum dataset pipeline."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "astropy>=6.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scipy>=1.11",
    "tqdm>=4.66",
]

[tool.uv]
package = false

